Components/Mindtouch Knowledge Migration/Mindtouch Knowledge Migration/objects/MindTouch_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Secret__c</fullName>
        <label>API_Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_User__c</fullName>
        <label>API_User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Internal_URL__c</fullName>
        <label>Internal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SiteURL__c</fullName>
        <label>NewURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TF_EX_VideoBaseURL__c</fullName>
        <label>Video Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TriggerActive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>matchingPattern__c</fullName>
        <label>matchingPattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TF_EX_MindTouch_Config</label>
    <pluralLabel>MindTouch_Configs</pluralLabel>
</CustomObject>